# edgartools-platform

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.mdm-deps  Dockerfile.mdm-neo4j  Dockerfile.pipelines  Dockerfile.warehouse-deps  README.md  TODOS.md  pyproject.toml
.github/workflows/: build-images.yml  ci.yml  deploy.yml  smoke-test.yml
.planning/: .continue-here.md  COORDINATION.md  HANDOFF.json  INGEST-CONFLICTS.md  PROJECT.md  REGISTRY.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  active-workstream  config.json
.planning/async-jobs/: load-history-06-1783726338.json
.planning/forensics/: report-2026-05-19.md  report-20260518-214027.md  report-a3-20260518-214750.md  report-neo4j-20260518-220453.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.scratch/adv-pipeline/: HANDOFF-2026-07-24.md  map.md
.scratch/agent-decision-data-plane/: ISSUES.md  spec.md
.scratch/artifact-usefulness-timelines/: map.md
.scratch/company-master-pipeline/: map.md
.scratch/legacy-sec-edgar-decommission/: README.md  iam-sec-edgar-ecs-execution-role-inline-sec-edgar-inline-policy.json  iam-sec-edgar-ecs-execution-role.json  iam-sec-edgar-ecs-task-role-inline-sec-edgar-inline-policy.json  iam-sec-edgar-ecs-task-role.json  iam-sec-edgar-scheduler-role-inline-sec-edgar-inline-policy.json  iam-sec-edgar-scheduler-role.json  iam-sec-edgar-stepfunctions-role-inline-sec-edgar-inline-policy.json  iam-sec-edgar-stepfunctions-role.json  schedule-sec-edgar-daily-ingest.json  sfn-sec-edgar-bronze-ingest.json  taskdef-sec-edgar-ingest-01.json  taskdef-sec-edgar-ingest-02.json  taskdef-sec-edgar-ingest-03.json  taskdef-sec-edgar-ingest-04.json
.scratch/release-readiness/: map.md
.scratch/todos-close-out/: map.md
docs/: CODEX.md  aws-authentication.md  aws-mdm-snowflake-postgres-cutover.md  aws-mdm-source-to-mdm.md  capture-modes.md  codex-fix-instructions.md  colima-docker-macos.md  dashboard-agent-view-explore.md  data-architecture-issues.md  data-architecture.md  decision-watermark.md  doctrine-data-plane.md  manager-bundle-read.md  neo4j.md  prod-mdm-snowflake-graph-first-load.md  prodb-to-prod-promotion.md  product-questions-and-dashboards.md  project-overview.md  runbook.md  sec-edgar-ipo-detection.md  snowflake-cli-migration.md  subject-bundle-read.md  subject-feature-screen.md
docs-internal/sessions/: session-multi-agent-setup-2026-06-01.md
docs/adr/: 0001-agent-decision-surface-first.md  0002-silver-soe-edgartools-exclusive.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/diagrams/: platform-architecture.mmd
docs/release-readiness/: adv-bulk-ingest-format-change-2026-07-24.md  adviser-fund-source-contract.md  agent-and-research-source-relevance-windows.md  auditor-evidence-ingestion-contract.md  batchsilver-contention-safe-publication-boundary.md  initial-findings.md  maxconcurrency4-data-integrity-proof.md  mdm-export-entitlement-preflight-policy.md  mdm-export-failure-boundary.md  parent-company-source-parser-contract.md  relationship-eligibility-at-release-watermark.md  relationship-source-coverage-by-document-type.md  required-relationship-bulk-load-completion-gate.md  required-relationship-bulk-load-preflight.json  ticket20-production-remediation-evidence.json  ticket20-strict-bulk-load-resume.md
edgar_warehouse/: artifacts.py  bronze_filing_artifacts.py  cli.py  filing_text_projection.py  gold.py  loaders.py  reconcile.py  runtime.py  silver.py  silver_protection.py  silver_store.py  text_extraction.py
edgar_warehouse/application/: __init__.py  adv_bronze_discovery.py  adv_bulk_ingest.py  auditor_evidence.py  command_context_factory.py  command_router.py  context_builder.py  effective_thirteenf.py  errors.py  relationship_bulk_load.py  runtime_facade.py  runtime_legacy.py  subsidiary_exhibits.py  warehouse_orchestrator.py
edgar_warehouse/config/: __init__.py  gold_schemas.yaml  warehouse_paths.properties
edgar_warehouse/domain/: __init__.py
edgar_warehouse/infrastructure/: __init__.py  artifact_service.py  capture_metrics.py  capture_mode.py  dataset_path_catalog.py  edgartools_sec_gateway.py  filing_artifact_service.py  manifest_service.py  object_storage.py  run_manifest_builder.py  sec_client.py  silver_once.py  storage.py  warehouse_settings.py
edgar_warehouse/loaders/: __init__.py  bronze_daily_index_extractors.py  bronze_reference_extractors.py  common.py  submissions.py
edgar_warehouse/market/: __init__.py  price_provider.py  wacc.py
edgar_warehouse/mdm/: __init__.py  adv_bulk.py  cli.py  coverage.py  dashboard_readonly.py  database.py  export.py  generation.py  graph.py  graph_readonly.py  match.py  normalize.py  observability.py  pipeline.py  publication.py  rules.py  snowflake_graph.py  stewardship.py  survivorship.py  universe.py
edgar_warehouse/parsers/: __init__.py  accounting_flags.py  adv.py  (+9 more)
infra/: aws-dev-application.json  aws-prodb-application.json
scripts/: claim-workstream.sh  run-bootstrap.sh  setup-local-dev.sh
(+1006 files in other folders)
