[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "edgartools-platform"
version = "0.1.0"
description = "Data platform for SEC EDGAR: warehouse ETL, Snowflake dbt gold layer, dashboards"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Paul Ananth", email = "thepaulananth@gmail.com" },
]
dependencies = [
    "edgartools>=5.29.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.0.0",
    "fsspec>=2023.1.0",
    "pytz>=2024.1",
    "zstandard>=0.20.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.2",
    # spaCy 3.8 imports click from spacy.cli even for `import spacy` (not only CLI
    # entrypoints). Newer typer vendors click and no longer pulls it transitively,
    # so warehouse images that install only --extra s3 (no streamlit) were missing
    # click and crashed Item 5.02 parse with ModuleNotFoundError. Pin explicitly.
    "click>=8.1",
    "spacy>=3.8.14",
    "en-core-web-sm",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.42.91",
    "fsspec>=2023.1.0",
    "s3fs>=2023.1.0",
]
snowflake = [
    "snowflake-connector-python>=3.7",
]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "pandas>=2.1",
    "snowflake-connector-python>=3.7",
]
mdm = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "sqladmin>=0.16.0",
    "jellyfish>=1.0.0",
    "splink>=3.9.0",
    "pydantic>=2.7.0",
    "boto3>=1.34.0",
]
mdm-runtime = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "snowflake-connector-python>=3.7",
    "jellyfish>=1.0.0",
    "pydantic>=2.7.0",
    "boto3>=1.34.0",
]
market = [
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "pandas>=2.1",
]

[project.scripts]
edgar-warehouse = "edgar_warehouse.cli:main"

[project.urls]
Homepage = "https://github.com/paulananth/edgartools-platform"
Source = "https://github.com/paulananth/edgartools-platform"

[tool.hatch.build]
include = [
  "edgar_warehouse/**/*.py",
  "edgar_warehouse/config/*.properties",
  "edgar_warehouse/config/*.yaml",
  "edgar_warehouse/mdm/migrations/*.sql",
]

[tool.pytest.ini_options]
markers = []

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
